--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="container">
+    <div id="header"><%= link_to image_tag('logo.png', alt: 'logo', id: 'logo'), root_path, title: 'Home', id: 'logoLink' %></div>
 
-<%= yield %>
+    <div id="body">
+      <%= yield %>
+    </div>
 
+    <div id="footer">
+    </div>
+  </div>
 </body>
 </html>
