added default link and image styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,12 @@
  *= require_tree .
  */
 html, body {margin:0;padding:0;height:100%;width:100%;}
+a {
+  text-decoration: none;
+  outline:0;
+  border:0;
+}
+img {border:0; outline:0;}
 #container {
   font-family:'Roboto', sans-serif, arial;
   font-weight:300;
