--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,11 +21,12 @@ img {border:0; outline:0;}
 #container {
   font-family:'Roboto', sans-serif, arial;
   font-weight:300;
+  color:#444;
 }
 #header {
   width:100%;
   height:60px;
-  background:orange;
+  background:#FFA500;
   color:#fff;
   position:relative;
 }
@@ -37,3 +38,21 @@ img {border:0; outline:0;}
   bottom:0;
 }
 #header #logoLink #logo {width:100%; height:100%;}
+#header #nav {
+  margin:0;
+  padding:0;
+  float:right;
+}
+#header #nav li {
+  display:inline-block;
+  line-height:60px;
+  list-style-type:none;
+}
+#header #nav li a {
+  color:#fff;
+  display:block;
+  padding:0 15px;
+}
+#header #nav li a:hover {
+  background:#ffc555;
+}
