--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,14 +30,18 @@ img {border:0; outline:0;}
   color:#fff;
   position:relative;
 }
-#header #logoLink {
-  height:32px;
+#header #logoWrapper {
   width:514px;
-  position:absolute;
-  left:0;
-  bottom:0;
+  height:100%;
+  float:left;
 }
-#header #logoLink #logo {width:100%; height:100%;}
+#header #logoWrapper #logoLink {
+  display:block;
+  position:relative;
+  width:100%;
+  height:100%;
+}
+#header #logoWrapper #logoLink #logo {width:100%; height:32px; position:absolute; left:0; bottom:0;}
 #header #nav {
   margin:0;
   padding:0;
