--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 <body>
   <div id="container">
     <div id="header">
-      <%= link_to image_tag('logo.png', alt: 'logo', id: 'logo'), root_path, title: 'Home', id: 'logoLink' %>
+      <div id="logoWrapper">
+        <%= link_to root_path, title: 'Home', id: 'logoLink' do %>
+          <%= image_tag('logo.png', alt: 'logo', id: 'logo') %>
+        <% end %>
+      </div>
       <ul id="nav">
         <li><%= link_to 'Sign Up', '' %></li><li><%= link_to 'Login', '' %></li>
       </ul>
