set up stylesheet structure (for print stylsheets)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>What Am I Thinking Of?</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "application-all", :media => "all" %>
+  <%= stylesheet_link_tag    "application-print", :media => "print" %>
   <%= javascript_include_tag "application" %>
   <%= favicon_link_tag '/favicon.ico' %>
   <%= csrf_meta_tags %>
