--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
     </div>
 
     <div id="body">
-      <%= yield %>
+      <div id="content">
+        <%= yield %>
+      </div>
     </div>
 
     <div id="footer">
