--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -62,7 +62,7 @@ img {border:0; outline:0;}
   padding:0 15px;
 }
 #header #nav li a:hover {
-  background:#ffc555;
+  background:#ffbb39;
 }
 #body {
   padding-bottom:130px;
