--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,25 @@
 <div class="center">
-  <%= form_for @user, html: {class: 'form'} do |f| %>
+  <%= form_for @user, validate: true, html: {class: 'form'} do |f| %>
     <h1 class="formHeader">Sign Up for Free!</h1>
 
     <div class="formField"> 
       <%= f.label :username %><br/>
-      <%= f.text_field :username, validate: true, class: 'liveVal' %>
-      <span class="validMsg"></span>
+      <%= f.text_field :username %>
     </div><br/>
 
     <div class="formField"> 
       <%= f.label :email %><br/>
-      <%= f.email_field :email, validate: true, class: 'liveVal' %>
-      <span class="validMsg"></span>
+      <%= f.email_field :email %>
     </div><br/>
 
     <div class="formField"> 
       <%= f.label :password %><br/>
-      <%= f.password_field :password, validate: true, class: 'liveVal', id: 'user_password' %>
-      <span class="validMsg"></span>
+      <%= f.password_field :password %>
     </div><br/>
 
     <div class="formField"> 
       <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation, validate: true, class: 'liveVal', id: 'user_password' %>
-      <span class="validMsg"></span>
+      <%= f.password_field :password_confirmation %>
     </div><br/>
 
     <div class="formSubmit">
@@ -31,4 +27,5 @@
     </div>
   <% end %>
 </div>
+<%= javascript_include_tag 'forms' %>
 <%= javascript_include_tag params[:controller] %>
