--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,7 @@
     <div class="formField"> 
       <%= f.label :email %><br/>
       <%= f.email_field :email %>
+      <div id="emailFix"></div>
     </div><br/>
 
     <div class="formField"> 
@@ -29,3 +30,4 @@
 </div>
 <%= javascript_include_tag 'forms' %>
 <%= javascript_include_tag params[:controller] %>
+<%= javascript_include_tag 'mailcheck.min' %>
