added jquery email format validation

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,3 +31,4 @@
 <%= javascript_include_tag 'forms' %>
 <%= javascript_include_tag params[:controller] %>
 <%= javascript_include_tag 'mailcheck.min' %>
+<script>userEmailValidator();</script>
