added validity icons to field validation message on sign up form

--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -34,8 +34,24 @@
       font-size:12pt;
       margin-left:15px;
       color:green;
+      padding-left:24px;
+      &:after {
+        content:' ';
+        position:absolute;
+        left:0;
+        top:2px;
+        width:18px;
+        height:18px;
+        background-image:image-url('sprites/icon_sprite.png');
+        background-repeat:no-repeat;
+        background-position:0 0;
+        overflow:hidden;
+      }
     }
-    .invalidField {color:#f33;}
+    .invalidField {
+      color:#f33;
+      &:after {background-position:-18px 0;}
+    }
   }
   .formSubmit {
     padding:5px 0 0 0;
