decreased font size of email suggestion box

--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -52,6 +52,7 @@
       color:#f33;
       &:after {background-position:-18px 0;}
     }
+    #emailFix {font-size:0.85em;}
   }
   .formSubmit {
     padding:5px 0 0 0;
