--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -11,9 +11,7 @@
     margin-bottom:10px;
     display:inline-block;
     position:relative;
-    label {
-      font-size:1.2em;
-    }
+    label {font-size:1.2em; text-transform:capitalize;}
     input[type="text"], input[type="password"], input[type="email"] {
       border:1px solid #ccc;
       border-radius:4px;
