--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,26 @@
 <div class="center">
-  <%= form_for @user, validate: true, html: {class: 'form'} do |f| %>
+  <%= form_for @user, html: {class: 'form'} do |f| %>
     <h1 class="formHeader">Sign Up for Free!</h1>
 
     <div class="formField"> 
       <%= f.label :username %><br/>
-      <%= f.text_field :username %>
+      <%= f.text_field :username, required: true, data: {'parsley-minlength' => '3', 'parsley-maxlength' => '30', 'parsley-type' => "alphanum"} %>
     </div><br/>
 
     <div class="formField"> 
       <%= f.label :email %><br/>
-      <%= f.email_field :email %>
+      <%= f.email_field :email, required: true, 'data-parsley-type' => 'email' %>
       <div id="emailFix"></div>
     </div><br/>
 
     <div class="formField"> 
       <%= f.label :password %><br/>
-      <%= f.password_field :password %>
+      <%= f.password_field :password, required: true, data: {'parsley-minlength' => '8', 'parsley-maxlength' => '100'} %>
     </div><br/>
 
     <div class="formField"> 
       <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation %>
+      <%= f.password_field :password_confirmation, required: true, data: {'parsley-equalto' => '#user_password', 'parsley-equalto-message' => "Doesn't match password"} %>
     </div><br/>
 
     <div class="formSubmit">
