decreased font size of validations message on client side validations

--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -36,6 +36,7 @@
       color:#f33;
       li {
         list-style-type:none;
+        font-size:0.85em;
         &:after {
           content:' ';
           position:absolute;
