--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -19,6 +19,8 @@ a {
   border:0;
 }
 img {border:0; outline:0;}
+ul {padding-left:25px;}
+li {list-style-type:square;}
 #container {
   font-family:'Roboto', sans-serif, arial;
   font-weight:300;
