--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -17,7 +17,9 @@ a {
   text-decoration: none;
   outline:0;
   border:0;
+  color:#0ab;
 }
+a:active, a:hover {color:#0ef;}
 img {border:0; outline:0;}
 ul {padding-left:25px;}
 li {list-style-type:square;}
