added focus styling to submit buttons

--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -69,6 +69,7 @@
       font-size:1.1em;
       &:hover {cursor:pointer; background:#ffbb39;}
       &.disabled:hover, &.disabled {background-color:#FFD8B1;}
+      &:focus {background-color:#ffbb39;}
     }
   }
   .formErrors {
