--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <% end %>
       </div>
       <ul id="nav">
-        <li><%= link_to 'Sign Up', signup_path %></li><li><%= link_to 'Login', '' %></li>
+        <li><%= link_to 'Sign Up', signup_path %></li><li><%= link_to 'Login', login_path %></li>
       </ul>
     </div>
 
