--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,11 @@
         <% end %>
       </div>
       <ul id="nav">
-        <li><%= link_to 'Sign Up', signup_path %></li><li><%= link_to 'Login', login_path %></li>
+        <% if current_user %>
+          <li><%= link_to 'Logout', logout_path %>
+        <% else %>
+          <li><%= link_to 'Sign Up', signup_path %></li><li><%= link_to 'Login', login_path %></li>
+        <% end %>
       </ul>
     </div>
 
