--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,18 @@
     </div>
 
     <div id="body">
-      <% if flash[:alert] %>
-        <div class="flash alert"><%= flash[:alert] %></div>
-      <% end %>
-      <% if flash[:notice] %>
-        <div class="flash notice"><%= flash[:notice] %></div>
+      <% if flash[:alert] || flash[:notice] %>
+        <div class="flash">
+          <%= link_to 'X', '#', class: 'flashClose' %>
+          <% if flash[:alert] %>
+            <%= link_to '!', '#', class: 'flashShow' %>
+            <p class="alert"><%= flash[:alert] %></p>
+          <% end %>
+
+          <% if flash[:notice] %>
+            <p class="notice"><%= flash[:notice] %></p>
+          <% end %>
+        </div>
       <% end %>
       <div id="content">
         <%= yield %>
