--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -93,13 +93,60 @@ li {list-style-type:square;}
 .flash {
   padding:0;
   margin:0;
-  text-align:center;
+  height:45px;
+  line-height:45px;
   color:#fff;
-  line-height:40px;
-  height:40px;
+  font-weight:300;
+  font-size:1.2em;
+  position:relative;
+  margin:0;
+  padding:0;
+  text-align:center;
+  display:block;
 }
+.alert, .notice {margin:0; padding:0; height:100%;}
 .alert {background:#f33;}
 .notice {background:green;}
+.flashShow, .flashClose {
+  border:1px solid;
+  border-radius:100%;
+  line-height:20px;
+  height:20px;
+  width:20px;
+  top:12px;
+  right:18px;
+  position:absolute;
+  z-index:5;
+  text-align:center;
+  color:#fff;
+  font-size:14px;
+  display:none;
+}
+.flashShow{
+  color:#f33;
+  -webkit-animation: pulsate 1s ease-out;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation: pulsate 1s ease-out;
+  -moz-animation-iteration-count: infinite;
+}
+.flashShow:hover {color:#f33;}
+.flashClose:hover {color:#fff;}
+
+@-webkit-keyframes pulsate {
+    0% {opacity: 0.4;}
+    25% {opacity: 0.6}
+    50% {opacity: 1.0;}
+    75% {opacity: 0.6}
+    100% {opacity: 0.4;}
+}
+
+@-moz-keyframes pulsate {
+    0% {opacity: 0.4;}
+    25% {opacity: 0.6}
+    50% {opacity: 1.0;}
+    75% {opacity: 0.6}
+    100% {opacity: 0.4;}
+}
 
 /* BOOTSTRAP LABELS & BADGES */
 .label {
