--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -121,6 +121,7 @@ li {list-style-type:square;}
   color:#fff;
   font-size:14px;
   display:none;
+  background-color:rgba(255,255,255,0.2);
 }
 .flashShow{
   color:#f33;
@@ -129,6 +130,7 @@ li {list-style-type:square;}
   -moz-animation: pulsate 1s ease-out;
   -moz-animation-iteration-count: infinite;
 }
+.flashShow:hover, .flashClose:hover {background-color:rgba(255,255,255,0.3);}
 .flashShow:hover {color:#f33;}
 .flashClose:hover {color:#fff;}
 
