added form instructions box styling

--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -7,6 +7,13 @@
     font-weight:300;
     font-size:2.2em;
   }
+  .formInstructions {
+    padding:15px;
+    font-size:0.8em;
+    border-radius:8px;
+    background:#ff9;
+    margin:8px 0;
+  }
   .formField {
     margin-bottom:10px;
     display:inline-block;
