--- a/app/views/layouts/email_template.html.erb
+++ b/app/views/layouts/email_template.html.erb
@@ -4,13 +4,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>What Am I Thinking Of?</title>
 </head>
-<body>
+<body style="padding:0; margin:0;">
   <table style="padding:0; border-collapse: collapse; font-family: sans-serif, arial; font-weight:300; color:#444; width:100%;">
     <thead>
       <tr>
-        <th style="height:50px; background:orange; padding:0;">
-          <div style="position:relative; width:100%; height:100%;">
-            <%= link_to image_tag('https://s3-us-west-2.amazonaws.com/waito/assets/images/small_logo.png', alt: 'What Am I Thinking Of?'), root_url, style: 'position:absolute; left:10px; bottom:0;' %>
+        <th style="padding:0;">
+          <div style="text-align:center; border-bottom:1px dashed #ccc;">
+            <%= link_to image_tag('https://s3-us-west-2.amazonaws.com/waito/assets/images/small_logo.png', alt: 'What Am I Thinking Of?'), root_url, style: 'margin:20px 0; display:inline-block;' %>
           </div>
         </th>
       </tr>
