--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="center">
   <%= form_for @user, url: password_reset_path, method: :put, html: {class: 'form'} do |f| %>
     <h1 class="formHeader">Set New Password</h1>
-
+    <%= form_errors_for(@user) %>
     <div class="formField">
       <%= f.label :password, "New Password" %><br/>
       <%= f.password_field :password %>
