styling on email template layout

--- a/app/views/layouts/email_template.html.erb
+++ b/app/views/layouts/email_template.html.erb
@@ -10,7 +10,7 @@
       <tr>
         <th style="padding:0;">
           <div style="text-align:center; border-bottom:1px dashed #ccc;">
-            <%= link_to image_tag('https://s3-us-west-2.amazonaws.com/waito/assets/images/small_logo.png', alt: 'What Am I Thinking Of?'), root_url, style: 'margin:20px 0; display:inline-block;' %>
+            <%= link_to image_tag('https://s3-us-west-2.amazonaws.com/waito/assets/images/small_logo.png', alt: 'What Am I Thinking Of?'), root_url, style: 'margin:20px 0; display:inline-block; border:0; text-decoration:none; font-weight:300;' %>
           </div>
         </th>
       </tr>
