--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -110,21 +110,28 @@ li {list-style-type:square;}
 .flashShow, .flashClose {
   border:1px solid;
   border-radius:100%;
-  line-height:20px;
-  height:20px;
-  width:20px;
-  top:12px;
+  line-height:22px;
+  height:22px;
+  width:22px;
+  top:11px;
   right:18px;
   position:absolute;
   z-index:5;
   text-align:center;
   color:#fff;
-  font-size:14px;
   display:none;
-  background-color:rgba(255,255,255,0.2);
+  font-size:10.5px;
+  box-shadow:0 -1px 1px #555 inset;
+  text-shadow: 0 -1px 0 #555;
+  background:linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4));
 }
 .flashShow{
+  font-weight:700;
+  font-size:14px;
   color:#f33;
+  background:none;
+  box-shadow:none;
+  text-shadow:none;
   -webkit-animation: pulsate 1s ease-out;
   -webkit-animation-iteration-count: infinite;
   -moz-animation: pulsate 1s ease-out;
