--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,7 +14,7 @@
     <div class="formField">
       <%= f.label :description %><br/>
       <%= f.text_area :description %>
-    </div>
+    </div><br/>
 
     <div class="formField">
       <%= f.label :tag_list, "Tags (seperate each by a comma)" %><br/>
