set default height for form textareas

--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -28,7 +28,7 @@
       box-shadow:0 3px 3px #eee inset;
       background:#f8f8f8;
     }
-    textarea {font-family:sans-serif,arial; font-size:0.85em;}
+    textarea {font-family:sans-serif,arial; font-size:0.85em; height:250px;}
     .field_with_errors {
       display:inline-block;
       input {border-color:#f33;}
