added form errors to post form

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,8 @@
     <!-- <p class="formInstructions">
       Enter your username or email below and then check your inbox for<br/> an email with password reset instructions.
     </p> -->
-
+    <%= form_errors_for(@post) %>
+    
     <div class="formField">
       <%= f.label :title %><br/>
       <%= f.text_field :title %>
