changed label on tags field

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
     </div><br/>
 
     <div class="formField">
-      <%= f.label :tag_ids, "Tags (seperate each by a comma)" %><br/>
+      <%= f.label :tag_ids, "Tags" %><br/>
       <%= f.hidden_field :tag_ids, value: @post.tag_ids.join(",") %>
     </div>
     
