--- a/app/assets/stylesheets/all/select2_custom.css.scss
+++ b/app/assets/stylesheets/all/select2_custom.css.scss
@@ -1,6 +1,6 @@
 .form {
   .formField {
-    #s2id_post_tag_ids {
+    #s2id_post_tag_list {
       border:1px solid #ccc;
       border-radius:4px;
       padding:8px 4px;
