--- a/app/assets/stylesheets/all/select2_custom.css.scss
+++ b/app/assets/stylesheets/all/select2_custom.css.scss
@@ -15,6 +15,7 @@
           background:none;
           box-shadow:none;
           label, input {border:0; background:none; box-shadow:none;}
+          input.select2-active {background-color:transparent !important;}
         }
         li.select2-search-choice {
           padding:7px 10px 7px 18px;
