--- a/app/assets/stylesheets/all/tags.css.scss
+++ b/app/assets/stylesheets/all/tags.css.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the tags controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.tagItem {
+  padding:7px 10px;
+  color:#444;
+  line-height:1;
+  font-size:0.9em;
+  background:#dedede;
+  border-radius:3px;
+  &:hover {
+    color:#777;
+    background:#ededed;
+  }
+}
