--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -20,7 +20,7 @@ a {
   border:0;
   color:#0ab;
 }
-a:active, a:hover {color:#0ef;}
+a:active, a:hover {color:#0cd;}
 img {border:0; outline:0;}
 ul {padding-left:25px;}
 li {list-style-type:square;}
