styled tags with inline-block display

--- a/app/assets/stylesheets/all/tags.css.scss
+++ b/app/assets/stylesheets/all/tags.css.scss
@@ -5,6 +5,7 @@
   font-size:0.9em;
   background:#dedede;
   border-radius:3px;
+  display:inline-block;
   &:hover {
     color:#777;
     background:#ededed;
