changed background color of tags

--- a/app/assets/stylesheets/all/select2_custom.css.scss
+++ b/app/assets/stylesheets/all/select2_custom.css.scss
@@ -22,7 +22,7 @@
           border:1px solid #ccc;
           font-size:0.9em;
           line-height:1;
-          background:#dedede;
+          background:#ddd;
           border:0;
           box-shadow:none;
           color:#444;
