--- a/app/assets/stylesheets/all/tags.css.scss
+++ b/app/assets/stylesheets/all/tags.css.scss
@@ -3,11 +3,11 @@
   color:#444;
   line-height:1;
   font-size:0.9em;
-  background:#dedede;
+  background:#ddd;
   border-radius:3px;
   display:inline-block;
   &:hover {
     color:#777;
-    background:#ededed;
+    background:#eee;
   }
 }
