--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -1,3 +1,30 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.postContraint {
+  padding:0;
+  padding-left:150px;
+  position:relative;
+  margin:30px 0 20px;
+  .postTitle {
+    margin:0 0 20px 0;
+    line-height:1.2;
+  }
+  .postUser {
+    position:absolute;
+    text-align:right;
+    left:0;
+    top:0;
+    width:120px;
+    border-right:1px solid #ccc;
+    height:100%;
+    padding:0 15px 0 0;
+    text-align:center;
+    img {border-radius:5%;}
+    .postUsername {font-size:1.5em;}
+  }
+  .postBottom {
+    display:inline-block;
+    margin-top:20px;
+    .postTags {
+      margin:0;
+    }
+  }
+}
