--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -91,6 +91,29 @@ li {list-style-type:square;}
 .right {float:right;}
 .left {float:left;}
 hr.dottedDivider {background:none; border:0; border-top:1px dashed;}
+a.actionLink {
+  background:orange;
+  color:#fff;
+  padding:2px 5px;
+  display:inline-block;
+  border-radius:3px;
+  font-size:9pt;
+  font-weight:bold;
+  opacity:0.8;
+}
+a.deleteLink {background:#f33;}
+a.actionLink:hover {opacity:1;}
+.actionIcon {
+  background-image:url('sprites/action_icons.png');
+  background-repeat:no-repeat;
+  display:inline-block;
+  width:14px;
+  height:14px;
+  vertical-align: middle;
+}
+.actionIcon.delete {
+  background-position:-14px 0;
+}
 
 .flash {
   padding:0;
