--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
     
     <div class="formSubmit">
-      <%= f.submit 'Create Post' %>
+      <%= f.submit 'Create Post' %> <%= link_to 'Cancel', cancel_post_path(@post), class: 'cancelForm' %>
     </div>
   <% end %>
 </div>
