--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -68,28 +68,43 @@
   }
   .formSubmit {
     padding:5px 0 0 0;
-    input[type="submit"] {
-      padding:15px 20px;
+    height:40px;
+    input[type="submit"], button.submitBtn {
       background:orange;
       border:0;
-      color:#fff;
-      border-radius:4px;
-      font-size:1.1em;
-      font-family:sans-serif, arial;
       &:hover {cursor:pointer; background:#ffbb39;}
       &.disabled:hover, &.disabled {background-color:#FFD8B1;}
       &:focus {background-color:#ffbb39;}
     }
     .cancelForm {
       margin-left:10px;
-      font-size:1.1em;
-      padding:15px 20px;
       background:#f33;
-      color:#fff;
-      border-radius:4px;
-      font-family:sans-serif, arial;
-      font-weight:400;
+      &:hover {background-color:#f66;}
     }
+     button.submitBtn, .cancelForm, input[type="submit"] {
+      display:inline-block;
+      vertical-align: top;
+      height:100%;
+      color:#fff;
+      padding:0 12px;
+      font-size:13pt;
+      font-weight:400;
+      font-family:sans-serif, arial;
+      border-radius:4px;
+      line-height:40px;
+      letter-spacing:-1px;
+    }
+    button.submitBtn, .cancelForm {
+      .submitIcon, .cancelIcon {
+        display:inline-block;
+        height:26px;
+        width:26px;
+        vertical-align: middle;
+        background-position:0 -14px;
+        background-image:image-url('sprites/action_icons.png');
+      }
+      .cancelIcon {background-position:26px -14px;}
+    } 
   }
   .formErrors {
     background:#f33;
