changed submit and cancel buttons on post form

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,11 @@
     </div>
     
     <div class="formSubmit">
-      <%= f.submit 'Create Post' %> <%= link_to 'Cancel', cancel_post_path(@post), class: 'cancelForm' %>
+      <%= button_tag type: 'submit', class: 'submitBtn' do %>
+        <span class="submitIcon"></span> <%= @post.new_record? ? 'Create Post' : 'Save Changes' %>
+      <% end %>
+      
+      <%= link_to '<span class="cancelIcon"></span> Cancel'.html_safe, cancel_post_path(@post), class: 'cancelForm' %>
     </div>
   <% end %>
 </div>
