--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -3,6 +3,7 @@
   padding-left:150px;
   position:relative;
   margin:30px 0 20px;
+  min-height:145px;
   .postTitle {
     margin:0;
     line-height:1.2;
