added links for pinning and report a post

--- a/app/assets/stylesheets/all/icons.css.scss
+++ b/app/assets/stylesheets/all/icons.css.scss
@@ -22,4 +22,4 @@ a.actionLink {
   .pin {background-position:-28px 0;}
   .report {width:18px; background-position:-42px 0;}
 }
-a.deleteLink {background:#f33;}
+a.reportLink, a.deleteLink {background:#f33;}
