--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,13 @@
 <div class="postMain postContraint"> 
   <h1 class="postTitle"><%= @post.title %></h1>
   <div class="postActionLinks">
-    <%= link_to '<span class="actionIcon edit"></span> Edit Post'.html_safe, edit_post_path(@post), class: 'actionLink' %>
-    <%= link_to '<span class="actionIcon delete"></span> Delete Post'.html_safe, @post, method: :delete, confirm: "Are you sure you want to delete this post?", class: 'actionLink deleteLink' %>
+    <% unless current_user == @post.user %>
+      <%= link_to '<span class="actionIcon edit"></span> Edit Post'.html_safe, edit_post_path(@post), class: 'actionLink' %>
+      <%= link_to '<span class="actionIcon delete"></span> Delete Post'.html_safe, @post, method: :delete, confirm: "Are you sure you want to delete this post?", class: 'actionLink deleteLink' %>
+    <% else %>
+      <%= link_to '<span class="actionIcon pin"></span> Pin Post'.html_safe, '', class: 'actionLink' %>
+      <%= link_to '<span class="actionIcon report"></span> Report Post'.html_safe, '', class: 'actionLink reportLink' %>
+    <% end %>
   </div>
   <div class="postContent"><%= @post.description %></div>
   <div class="postBottom">
