--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,9 +15,9 @@
       <%= @post.tags.map{|tag| link_to(tag.name, tag, class: 'tagItem')}.join(' ').html_safe %>
     </div>
     <div class="postRep">
-      <%= link_to '', post_vote_path(@post, rep_val: 1), method: :put, class: 'like' %>
+      <%= voting_link(1.0, @post, @user_vote) %>
       <p id="repCount">2334</p>
-      <%= link_to '', post_vote_path(@post, rep_val: -1), method: :put, class: 'dislike' %>
+      <%= voting_link(-1.0, @post, @user_vote) %>
     </div>
   </div>
 
