--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -45,13 +45,16 @@
         background-image:image-url('sprites/voting_icons.png');
         background-position:0 0;
         vertical-align: top;
+        position:relative;
+        z-index:3;
         &:hover {background-position:-24px 0;}
-        &:active {background-position:-48px 0;}
+        &:active, &.voted {background-position:-48px 0;}
+        &.voted {cursor:default;}
       }
       .dislike {
         background-position:-120px 0;
         &:hover {background-position:-96px 0;}
-        &:active {background-position:-72px 0;}
+        &:active, &.voted {background-position:-72px 0;}
       }
       #repCount {
         line-height:1.1;
