--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="postUser">
-    <%= image_tag('default_user.png') %>
+    <%= link_to image_tag('default_user.png'), @post.user %>
     <span class="postUsername"><%= link_to @post.user.username %></span>
   </div>
 </div>
