send id value to popup helper in login popup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     </div>
 
     <% unless current_user %>
-      <%= popup('/sessions/form') %>
+      <%= popup('/sessions/form', 'loginPopup') %>
     <% end %>
   </div>
 </body>
