--- a/app/assets/stylesheets/all/popup.css.scss
+++ b/app/assets/stylesheets/all/popup.css.scss
@@ -5,18 +5,29 @@
   width:100%;
   height:100%;
   display:none;
+  z-index:9999;
   .backdrop {
     height:100%;
     width:100%;
     background:rgba(0,0,0,0.2);
     text-align:center;
-    .box {
-      background:#fff;
-      padding:30px;
+    .boxWrapper {
       display:inline-block;
-      border-radius:0 0 15px 15px;
-      box-shadow:0 0 18px rgba(0,0,0,0.5);
-      .form {margin:0;}
+      .box {
+        background:#fff;
+        padding:30px;
+        display:none;
+        border-radius:0 0 15px 15px;
+        box-shadow:0 0 18px rgba(0,0,0,0.5);
+        position:relative;
+        .form {margin:0;}
+        .boxClose {
+          position:absolute;
+          right:20px;
+          top:10px;
+          font-size:0.9em;
+        }
+      }
     }
   }
 }
