--- a/app/assets/stylesheets/application-all.css
+++ b/app/assets/stylesheets/application-all.css
@@ -21,6 +21,7 @@ a {
   color:#0ab;
 }
 a:active, a:hover {color:#0cd;}
+b {font-weight:700;}
 img {border:0; outline:0;}
 ul {padding-left:25px;}
 li {list-style-type:square;}
