--- a/app/assets/stylesheets/all/comments.css.scss
+++ b/app/assets/stylesheets/all/comments.css.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the comments controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#commentForm {
+  display:block;
+  margin:15px 0 20px;
+  .formField {
+    display:block;
+    textarea {width:98%; height:150px; padding: 4px;}
+  }
+  .formSubmit {
+    padding:0;
+    height:40px;
+    input {line-height:40px; font-size:11pt;}
+  }
+}
