changed border color of form inputs

--- a/app/assets/stylesheets/all/forms.css.scss
+++ b/app/assets/stylesheets/all/forms.css.scss
@@ -21,7 +21,7 @@
     label {font-size:1.2em; text-transform:capitalize;}
     .fieldReq {float:right; color:#aaa; font-size:0.7em; padding-top:0.8em;}
     input[type="text"], input[type="password"], input[type="email"], textarea {
-      border:1px solid #ccc;
+      border:1px solid #ddd;
       border-radius:4px;
       padding:8px 4px;
       width:400px;
