--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,7 +1,7 @@
 <div class="postUser">
   <div class="formField">
-    <%= label_tag '', '&nbsp;'.html_safe %>
-    <%= link_to image_tag('default_user.png', class: 'userImage'), current_user %>
+    <%= label_tag '', '&nbsp;'.html_safe %><br/>
+    <%= link_to image_tag('default_user.png', class: 'userImageMed'), current_user %>
     <span class="postUsername"><%= link_to @post.user.username %></span>
   </div>
 </div>
