add .subPost css class and styling and fixed typo with postConstraint class

--- a/app/assets/stylesheets/all/posts.css.scss
+++ b/app/assets/stylesheets/all/posts.css.scss
@@ -1,4 +1,4 @@
-.postContraint {
+.postConstraint {
   padding:0;
   padding-left:150px;
   position:relative;
@@ -65,3 +65,4 @@
     }
   }
 }
+.subPost {padding-left:250px;}
