--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -9,12 +9,17 @@
 </div>
 <% if @post.comments.present? %>  
   <% @post.comments.each do |comment| %>
-    <div class="postComment postContraint"> 
+    <div class="postComment postConstraint"> 
       <div class="postUser">
         <%= link_to image_tag('default_user.png', class: 'userImageMed'), comment.user %>
         <span class="postUsername"><%= link_to comment.user.username %></span>
       </div>
       <div class="postContent"><%= markdown(comment.message) %></div>
+      <div class="postBottom">
+        <div class="commentReply">
+          <%= link_to 'Reply to comment', load_reply_form_path(comment), class: 'replyFormLoadLink'  %>
+        </div>
+      </div>
     </div>
   <% end %>
 <% else %>
@@ -22,4 +27,13 @@
 <% end %>
 <script>
 $(".sortMenu").sortMenu();
+$(".replyFormLoadLink").click(function(event){
+  var $that = $(this);
+
+  $.get(this.href, function(data){
+    $that.closest('.postComment').after(data);
+  });
+
+  event.preventDefault();
+});
 </script>
